Fix overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -103,6 +103,7 @@ button {
 
 .task span {
   flex-grow: 1;
+  word-break: break-all;
 }
 
 .task button {
